# code-snippets

./: .gitignore  README.md
c/: .ycm_extra_conf.py  Makefile  curl_usage.c  glib_list.c  json_usage  json_usage.c  time_usage.c
cmake/: extract_nocomment_cmakelists.sh
cmake/project1/: .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.nocomment  build.sh
cmake/project1/src/: main.cpp
cmake/project1/src/lib1/: boost_filesystem.cpp  boost_filesystem.h
cmake/project1/src/lib2/: boost_options.h
cmake/project1/test/lib1/: test_boost_filesystem.cpp
cpp/: .ycm_extra_conf.py  Makefile  avoid_code_dup_in_const_nonconst_member.cpp  boost_date_arithmatic.cpp  boost_filesystem.cpp  boost_options.cpp  boost_string.cpp  copy_and_swap.cpp  cpp_trait_demo.cpp  future_promise.cpp  getopt_usage.cpp  glog-demo.cpp  gtest_demo.cpp  hashtable.cpp  hashtable.h  hashtable_main.cpp  iterate_over_dir.cpp  iterator_traits_demo.cpp  md5.cpp  mmap_usage.cpp  mysql_demo.cpp  nan.cpp  nlohmann_json_demo.cpp  noexcept.cpp  non_rercusive_cartesian.cpp  override_common_operators.cpp  random_number.cpp  range_based_for_loop.cpp  rapidjson_usage.cpp  run_function_at_given_time_every_day.cpp  sleep.cpp  split_string.cpp  std_lower_bound.cpp  thread_pool.cpp  threadpool_profile.cpp  timing.cpp  variadic_template.cpp
cpp-perf/: TODO  exception_vs_return.cpp  murmurhash_dist.cpp  string_split.cpp  stringstream_vs_c_array.cpp  util.h  vector_loop.cpp
cpp-perf/network-transport-speed/: build.sh  client.cpp  server.cpp
cpp/chat-server-with-boost-asio/: chat_client.cpp  chat_message.hpp  chat_server.cpp
cpp/thrift-usage-with-conn-pool/: Makefile  build.sh  client.cpp  hello.thrift  server.cpp  tcpool.h  tserver.h
cpp/thrift-usage-with-conn-pool/gen-cpp/: HelloSevice.cpp  HelloSevice.h  HelloSevice_server.skeleton.cpp  hello_constants.cpp  hello_constants.h  hello_types.cpp  hello_types.h
cpp/websocketpp-demo/: build.sh  client.cpp  objectpool.h  objectpool_test.cpp  server.cpp
data/: test.json
makefile/: .sdf  Makefile  Makefile.no_comment
makefile/lib/: lib.cpp  lib.h
makefile/src/bar/: bar.cpp  bar.h
makefile/src/foo/: foo.cpp
node.js/: simple_file_server.js
python/: create_server_with_BaseHTTPServer.py  deal_with_chinese_chars.py  deal_with_command_line_arg.py  deal_with_json.py  deal_with_sql.py  deal_with_utf8_chars.py  get_all_files_under_a_dir.py  send_http_request_with_httplib.py
